--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -88,14 +88,17 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   width: 45%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.card:hover,
+/*.card:hover,
 .card:focus,
 .card:active {
   color: #0070f3;
   border-color: #0070f3;
-}
+}*/
 
 .card h2 {
   margin: 0 0 1rem 0;
@@ -111,6 +114,12 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.homeText {
+  font-size: 1.5rem;
+  margin-top: 100px;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 @media (max-width: 600px) {
