--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,11 @@
   height: 100vh;
 }
 
+.container input {
+  border-color: internal #B8BDC5;
+  padding: 5px;
+}
+
 .main {
   padding: 5rem 0;
   flex: 1;
@@ -48,6 +53,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  color: #646d81;
 }
 
 .title,
@@ -93,12 +99,12 @@
   align-items: center;
 }
 
-/*.card:hover,
+.card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}*/
+  color: #646d81;
+  border-color: #646d81;
+}
 
 .card h2 {
   margin: 0 0 1rem 0;
@@ -120,6 +126,20 @@
   font-size: 1.5rem;
   margin-top: 100px;
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.backButton{
+  border: 2px solid #646d81;
+  padding: 0.8rem 1rem;
+  border-radius: 0.8rem;
+  color: #646d81;
+  transition: 0.3s;
+}
+
+.backButton:hover{
+  background-color: #646d81;
+  color: #fff;
+  border-color: #646d81;
 }
 
 @media (max-width: 600px) {
